2007-06-22  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/treeview/editable_cells/examplewindow.cc:
	* examples/book/treeview/editable_cells/examplewindow.h:
	Added comments about using CellRendererSpin or CellRendererProgress here.
	I tested the new CellRendererSpin here and it works.

2.11.3:

2007-06-10  Kalle Vahlman  <zuh@iki.fi>

	* tests/property_notification/main.cc: #ifdef out the use of the regular property API 
	if properties are disabled.

2007-02-10  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/types.hg: Add ListHandle_AtomString intermediate container 
	type.
	* gdk/src/dragcontext.ccg:
	* gdk/src/dragcontext.hg: get_targets(),
	* gtk/src/selectiondata.hg: 
	* gtk/src/selectiondata.ccg: get_targets(): Use ListHandle_AtomString with appropriate 
	ownership instead of the current faulty code. This changes the return type, and 
	therefore changes the API and ABI of this method, but it is not possible that 
	anyone was using these functions until now, due to the brokenness.
	Bug #399403 (Yannick Guesnet)

2007-06-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/action.ccg:
	* gtk/src/action.hg: Added create_menu().
	* gtk/src/printer.hg: Added list_papers().

	* docs/tutorial/gtkmm-tut.xml: In the gmmproc chapter, mention the optional text 
	for the _WRAP_METHOD() deprecated parameter.

2007-06-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/treemodelcolumn.h: Added a comment about the difficulty of using 
	a static instance.
	* gtk/src/notebook.hg: Added const versions of get_n_pages() and page_num(), 
	deprecating the non-const methods. Bug #442284 (Tomasz Ostrowski).
	* gtk/src/scalebutton.hg: Use refresult instead of refreturn. Maybe gmmproc 
	should not ignore unknown options.

2007-06-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/scalebutton.hg: Added the constructor now that 
	gtk_scale_button_new() has been fixed in GTK+.

2007-06-09  Murray Cumming  <murrayc@murrayc.com>
