@@ -39,11 +39,13 @@ class RecentAction : public Gtk::Action
   _CLASS_GOBJECT(RecentAction, GtkRecentAction, GTK_RECENT_ACTION, Gtk::Action, GtkAction)
 
 protected:
-  _WRAP_CTOR(RecentAction(const Glib::ustring& name, const Glib::ustring& label, const Glib::ustring& tooltip, const Gtk::StockID& stock_id), gtk_recent_action_new)
+  //TODO: See bug #450032: _CTOR_DEFAULT()
+  _WRAP_CTOR(RecentAction(const Glib::ustring& name, const Glib::ustring& label, const Glib::ustring& tooltip = Glib::ustring(), const Gtk::StockID& stock_id = Gtk::StockID()), gtk_recent_action_new)
   _WRAP_CTOR(RecentAction(const Glib::ustring& name, const Glib::ustring& label, const Glib::ustring& tooltip, const Gtk::StockID& stock_id, const Glib::RefPtr<RecentManager>& manager), gtk_recent_action_new_for_manager )
 
 public:
-  _WRAP_CREATE(const Glib::ustring& name, const Glib::ustring& label, const Glib::ustring& tooltip, const Gtk::StockID& stock_id)
+  //TODO: See bug #450032: _WRAP_CREATE()
+  _WRAP_CREATE(const Glib::ustring& name, const Glib::ustring& label, const Glib::ustring& tooltip = Glib::ustring(), const Gtk::StockID& stock_id = Gtk::StockID())
   _WRAP_CREATE(const Glib::ustring& name, const Glib::ustring& label, const Glib::ustring& tooltip, const Gtk::StockID& stock_id, const Glib::RefPtr<RecentManager>& manager)
 
   _WRAP_METHOD(bool get_show_numbers(), gtk_recent_action_get_show_numbers)
