@@ -1,5 +1,15 @@
 2007-06-22  Murray Cumming  <murrayc@murrayc.com>
 
+	* gtk/src/recentaction.hg: Constuctor and create(): 
+	Added default values for the tooltips and stock_id paramters,
+	though I think none of these should need to specified.
+	See bug #450032.
+	* gtk/gtkmm.h: Added recentaction.h
+	* examples/book/recent_files/examplewindow.cc: Used the RecentAction to 
+	create a sub-menu.
+
+2007-06-22  Murray Cumming  <murrayc@murrayc.com>
+
 	* examples/book/treeview/editable_cells/examplewindow.cc:
 	* examples/book/treeview/editable_cells/examplewindow.h:
 	Added comments about using CellRendererSpin or CellRendererProgress here.
